integration_tests/tests/integration_tests/snapshots/integration_tests__cnft_tests__mint_transfer_transfer.snap
---
source: integration_tests/tests/integration_tests/cnft_tests.rs
expression: response
snapshot_kind: text
---
{
  "interface": "V1_NFT",
  "id": "EcLv3bbLYr2iH5PVEuf9pJMRdDCvCqwSx3Srz6AeKjAe",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://metaplex.com",
    "files": [],
    "metadata": {
      "name": "test",
      "symbol": "TST",
      "token_standard": "NonFungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "J6uMQYzyeFXE5tvnKtmAUyHeiKEWiELARceY8HhSuBF6",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": true,
    "data_hash": "68ZcMZF52Bv3mayj4AjPFdVoMhrE9Ap18CQRuUhB2pWu",
    "creator_hash": "2RsQnw2DXTrKWT2GAd7LEnvgHuL8gZ8C2wk89dcW31yb",
    "asset_hash": "5gZXmV7yzWMcKk2n24t4tXECHJffRX179ZoxVaheADpp",
    "tree": "AdKerrR54h9H1zNoyex9f6svuQQSeKrSEufiGtA5zu8v",
    "seq": 3,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [
    {
      "address": "Fq4HDXfutKjEZ7zZP2JmKboSm2ZsYsKEJ7BLQAfrpNcc",
      "share": 55,
      "verified": false
    },
    {
      "address": "AhKyxn99oZN7MhdWfU8S9qmmBZBkQYgr2KaNQEJWVHcd",
      "share": 45,
      "verified": false
    }
  ],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "8WUbLiKgdqA2jcA8xR2Qm1nxeQTHSiz2HTyZDb7nZu6n"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": 0
  },
  "mutable": false,
  "burnt": false
}
